--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "kingdom-furi-medieval-rpg",
+  "name": "kingdom-furi-rpg",
   "version": "1.0.0",
   "description": "A browser-based 3D medieval RPG with realistic graphics and AI voice dialogue",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
-    "start": "live-server --port=8080 --host=0.0.0.0",
-    "dev": "live-server --port=8080 --host=0.0.0.0 --open=/index.html"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "download": "bash download-assets.sh"
   },
   "keywords": ["rpg", "medieval", "threejs", "webgl", "game"],
-  "author": "Dawud",
+  "author": "Mr Dawud",
   "license": "MIT",
   "dependencies": {
-    "three": "^0.128.0",
-    "simplex-noise": "^2.4.0"
-  },
-  "devDependencies": {
-    "live-server": "^1.2.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "nodemon": "^3.0.1"
   }
 }
